--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_login_loginText"
         app:layout_constraintVertical_bias="0.107"
+        android:autofillHints=""
+        tools:targetApi="o"
          />
 
     <EditText
@@ -73,7 +75,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_login_enterEmail"
         app:layout_constraintVertical_bias="0.057"
-         />
+        android:autofillHints=""
+        tools:targetApi="o"
+        />
 
     <Button
         android:id="@+id/button_login_loginButton"
