--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login"
+    tools:context=".presentation.Login"
     android:background="@color/colorPrimary"
     >
 
@@ -15,19 +15,20 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/allura"
+        android:fontFamily="@font/orbitron"
         android:text="@string/login"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
         android:textSize="75sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.095" />
+        app:layout_constraintVertical_bias="0.128" />
 
     <EditText
-        android:id="@+id/editText_login_enterEmail"
+        android:id="@+id/editText_login_enterUserName"
         android:layout_width="254dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
@@ -37,7 +38,7 @@
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:hint="@string/email"
+        android:hint="@string/userName"
         android:inputType="textAutoCorrect|textAutoComplete|textEmailAddress"
         android:shadowColor="@color/colorAccent"
         android:textColor="@android:color/background_light"
@@ -58,9 +59,9 @@
         android:layout_width="254dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="484dp"
+        android:autofillHints=""
         android:background="@android:drawable/editbox_background_normal"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
@@ -72,12 +73,11 @@
         android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_login_enterEmail"
-        app:layout_constraintVertical_bias="0.057"
-        android:autofillHints=""
-        tools:targetApi="o"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/editText_login_enterUserName"
+        app:layout_constraintVertical_bias="0.603"
+        tools:targetApi="o" />
 
     <Button
         android:id="@+id/button_login_loginButton"
@@ -89,14 +89,14 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@android:color/background_light"
-        android:text="@string/login"
         android:onClick="loginBtnClick"
+        android:text="@string/login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.768"
+        app:layout_constraintHorizontal_bias="0.665"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_login_enterPassword"
-        app:layout_constraintVertical_bias="0.097" />
+        app:layout_constraintVertical_bias="0.096" />
 
     <TextView
         android:id="@+id/textView_login_or"
