--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".SplashScreen">
+    tools:context=".presentation.SplashScreen">
 
     <TextView
         android:id="@+id/appNameSplashScreen"
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/allura"
+        android:fontFamily="@font/orbitron"
         android:text="@string/app_name"
         android:textColor="@android:color/background_light"
         android:textSize="75sp"
