--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -47,7 +47,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_signUp_signUpText"
         app:layout_constraintVertical_bias="0.071"
-        android:autofillHints=""
         tools:targetApi="o"
         />
 
@@ -73,7 +72,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationName"
         app:layout_constraintVertical_bias="0.059"
-        android:autofillHints=""
         tools:targetApi="o"
 
         />
@@ -100,7 +98,7 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_name_user"
-        app:layout_constraintVertical_bias="0.089"
+        app:layout_constraintVertical_bias="0.064"
         tools:targetApi="o" />
 
     <EditText
@@ -110,6 +108,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:autofillHints=""
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
@@ -120,13 +119,10 @@
         android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationPass"
-        app:layout_constraintVertical_bias="0.12"
-        android:autofillHints=""
-        tools:targetApi="o"
-        />
+        app:layout_constraintVertical_bias="0.101"
+        tools:targetApi="o" />
 
     <Button
         android:id="@+id/button_signUp_registerbutton"
