--- a/app/src/main/res/layout/fragment_tab_fragment_transportation.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment_transportation.xml
@@ -5,14 +5,12 @@
     android:layout_height="match_parent"
     tools:context="presentation.TabFragmentTransportation">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/listView_insideFragmentTransportation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/tabTextTransportation"
-        android:gravity="center"
-        android:textSize="30sp"
+        android:layout_height="match_parent">
 
-        />
+
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
