Revert "Add functionality to sort button."
This reverts commit 4685083a7b99676c7d2cfaf6a5cc8d61404fb009

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,25 +35,23 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:autofillHints=""
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimaryDark"
-        android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/userName"
         android:inputType="textAutoCorrect|textAutoComplete|textEmailAddress"
-        android:shadowColor="@color/black_overlay"
+        android:shadowColor="@color/colorAccent"
         android:textColor="@android:color/background_light"
-        android:textColorHighlight="@color/black_overlay"
-        android:textColorLink="@color/black_overlay"
-        android:textCursorDrawable="@drawable/cursor_colour"
+        android:textColorHighlight="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_login_loginText"
         app:layout_constraintVertical_bias="0.107"
-        tools:targetApi="o" />
+        tools:targetApi="o"
+         />
 
     <EditText
         android:id="@+id/editText_login_enterPassword"
@@ -65,7 +63,6 @@
         android:autofillHints=""
         android:background="@android:drawable/editbox_background_normal"
         android:backgroundTint="@color/colorPrimaryDark"
-        android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -73,7 +70,6 @@
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
         android:textColorLink="@color/colorAccent"
-        android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
