--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,7 +142,6 @@
 
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:background="@color/colorPrimaryDark">
@@ -191,9 +190,7 @@
         android:layout_height="776dp"
         android:layout_gravity="end"
         android:outlineAmbientShadowColor="@color/colorPrimary"
-        android:outlineSpotShadowColor="@color/colorPrimary"
-
-        />
+        android:outlineSpotShadowColor="@color/colorPrimary" />
 
 
 
