Revert "Revert "Add functionality to sort button.""
This reverts commit c7c9c4a1793bdebdb264eaffe72bc59097f5cf57

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,23 +35,25 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:autofillHints=""
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimaryDark"
+        android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/userName"
         android:inputType="textAutoCorrect|textAutoComplete|textEmailAddress"
-        android:shadowColor="@color/colorAccent"
+        android:shadowColor="@color/black_overlay"
         android:textColor="@android:color/background_light"
-        android:textColorHighlight="@color/colorAccent"
-        android:textColorLink="@color/colorAccent"
+        android:textColorHighlight="@color/black_overlay"
+        android:textColorLink="@color/black_overlay"
+        android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_login_loginText"
         app:layout_constraintVertical_bias="0.107"
-        tools:targetApi="o"
-         />
+        tools:targetApi="o" />
 
     <EditText
         android:id="@+id/editText_login_enterPassword"
@@ -63,6 +65,7 @@
         android:autofillHints=""
         android:background="@android:drawable/editbox_background_normal"
         android:backgroundTint="@color/colorPrimaryDark"
+        android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -70,6 +73,7 @@
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
         android:textColorLink="@color/colorAccent"
+        android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
