--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -36,19 +36,20 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimaryDark"
+        android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/Useresname"
         android:inputType="textPersonName"
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
         android:textColorLink="@color/colorAccent"
+        android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_signUp_signUpText"
         app:layout_constraintVertical_bias="0.071"
-        tools:targetApi="o"
-        />
+        tools:targetApi="o" />
 
     <EditText
         android:id="@+id/editText_name_user"
@@ -60,21 +61,22 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimaryDark"
+        android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/userName"
         android:inputType="text"
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
         android:textColorLink="@color/colorAccent"
+        android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationName"
-        app:layout_constraintVertical_bias="0.059"
-        tools:targetApi="o"
 
-        />
+        app:layout_constraintVertical_bias="0.059"
+        tools:targetApi="o" />
 
     <EditText
         android:id="@+id/editText_name_registrationPass"
@@ -87,12 +89,14 @@
         android:autofillHints=""
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimaryDark"
+        android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
         android:textColorLink="@color/colorAccent"
+        android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -111,12 +115,14 @@
         android:autofillHints=""
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimaryDark"
+        android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/confirmpassword"
         android:inputType="textPassword"
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
         android:textColorLink="@color/colorAccent"
+        android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
