--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,6 +142,7 @@
 
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:background="@color/colorPrimaryDark">
@@ -190,7 +191,9 @@
         android:layout_height="776dp"
         android:layout_gravity="end"
         android:outlineAmbientShadowColor="@color/colorPrimary"
-        android:outlineSpotShadowColor="@color/colorPrimary" />
+        android:outlineSpotShadowColor="@color/colorPrimary"
+
+        />
 
 
 
