--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#0091EA</color>
     <color name="colorPrimaryDark">#0071D1</color>
     <color name="colorAccent">#D81B60</color>
-
+    <color name="adPostGreyBackground">#FFD7D7DB</color>
     <color name="black_overlay">#EC1C24</color>
     <color name="whiteBtn">#FAFAFA</color>
 </resources>
