--- a/app/src/main/res/layout/activity_view_ad_current_user.xml
+++ b/app/src/main/res/layout/activity_view_ad_current_user.xml
@@ -50,7 +50,7 @@
         android:layout_width="0dp"
         android:layout_height="400dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="8dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,10 +74,13 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="8dp"
+        android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimary"
         android:onClick="editBtnClick"
         android:text="@string/edit"
         android:textAllCaps="false"
+        android:textColor="@color/whiteBtn"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,10 +94,14 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="8dp"
+        android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/black_overlay"
         android:onClick="deleteBtnClick"
         android:text="@string/delete"
         android:textAllCaps="false"
+        android:textColor="@color/whiteBtn"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout_viewAdCU_bot"
