All homescreen Ads clickable
I have connected the pages with the homescreen so users will now be able to click and view on ads. Logged in users also enjoy the luxury of editing an Ad if they click on an Ad that is theirs on the homescreen. System is all secure

--- a/app/src/main/res/layout/activity_edit_ad.xml
+++ b/app/src/main/res/layout/activity_edit_ad.xml
@@ -96,10 +96,10 @@
 
     <TextView
         android:id="@+id/textView_editAd_header"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/orbitron"
         android:text="@string/edit"
         android:textAlignment="center"
         android:textAllCaps="false"
