--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -2,9 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:drawable/editbox_background_normal"
     android:orientation="vertical"
-    android:padding="3dp">
+    android:id="@+id/row_forAds"
+    android:padding="3dp"
+    tools:context=".presentation.RecyclerViewAdapter">
 
 
         <TextView
