--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.Login"
-    android:background="@color/colorPrimary"
-    >
+    tools:context=".presentation.ForgetPassword"
+    android:background="@color/colorPrimary">
+
 
     <TextView
-        android:id="@+id/textView_login_loginText"
+        android:id="@+id/textView_forgetPassword_resetPasswordText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/orbitron"
-        android:text="@string/login"
+        android:text="@string/resetMyPassword"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
         android:textSize="75sp"
@@ -25,137 +25,111 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.128" />
+        app:layout_constraintVertical_bias="0.115" />
 
     <EditText
-        android:id="@+id/editText_login_enterUserName"
+        android:id="@+id/editText_forgetPassword_userName"
         android:layout_width="254dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:autofillHints=""
+        android:layout_marginBottom="540dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/colorPrimaryDark"
         android:cursorVisible="true"
         android:ems="10"
         android:hint="@string/userName"
-        android:inputType="textAutoCorrect|textAutoComplete|textEmailAddress"
-        android:shadowColor="@color/black_overlay"
-        android:textColor="@android:color/background_light"
-        android:textColorHighlight="@color/black_overlay"
-        android:textColorLink="@color/black_overlay"
-        android:textCursorDrawable="@drawable/cursor_colour"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_login_loginText"
-        app:layout_constraintVertical_bias="0.107"
-        tools:targetApi="o" />
-
-    <EditText
-        android:id="@+id/editText_login_enterPassword"
-        android:layout_width="254dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="484dp"
-        android:autofillHints=""
-        android:background="@android:drawable/editbox_background_normal"
-        android:backgroundTint="@color/colorPrimaryDark"
-        android:cursorVisible="true"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:shadowColor="@color/colorAccent"
+        android:inputType="text"
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
         android:textColorLink="@color/colorAccent"
         android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_login_enterUserName"
-        app:layout_constraintVertical_bias="0.603"
+        app:layout_constraintTop_toBottomOf="@+id/textView_forgetPassword_resetPasswordText"
+        app:layout_constraintVertical_bias="0.482"
+        tools:targetApi="o" />
+
+
+    <EditText
+        android:id="@+id/editText_forgetPassword_securityAnswer"
+        android:layout_width="254dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:hint="@string/securityAnswer"
+        android:inputType="text"
+        android:textColor="@android:color/background_light"
+        android:textColorHighlight="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
+        android:textCursorDrawable="@drawable/cursor_colour"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_forgetPassword_securityQuestion"
+        app:layout_constraintVertical_bias="0.037"
         tools:targetApi="o" />
 
     <Button
-        android:id="@+id/button_login_loginButton"
+        android:id="@+id/button_forgetPassword_getSecurityQuestionBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="404dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@android:color/background_light"
-        android:onClick="loginBtnClick"
-        android:text="@string/login"
+        android:onClick="getSecurityQuestionBtnClick"
+        android:text="@string/getSecurityQuestion"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.665"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_login_enterPassword"
-        app:layout_constraintVertical_bias="0.096" />
-
-    <TextView
-        android:id="@+id/textView_login_or"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/or"
-        android:textColor="@android:color/background_light"
-        android:textColorHighlight="@color/colorAccent"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_login_enterPassword"
-        app:layout_constraintVertical_bias="0.402" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_userName"
+        app:layout_constraintVertical_bias="0.086" />
 
     <Button
-        android:id="@+id/button_login_signupBtn"
-        android:layout_width="254dp"
+        android:id="@+id/button_forgetPassword_resetPasswordBtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:onClick="signUpBtnClick"
+        android:layout_marginBottom="200dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@android:color/background_light"
-        android:text="@string/signupTwo"
+        android:onClick="resetBtnClick"
+        android:text="@string/resetPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_login_or"
-        app:layout_constraintVertical_bias="0.311" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_securityAnswer"
+        app:layout_constraintVertical_bias="0.157" />
 
     <TextView
-        android:id="@+id/textView_login_resetBtn"
+        android:id="@+id/textView_forgetPassword_securityQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="forgetPasswordBtnClick"
-        android:text="@string/forgetPassword"
-        android:textSize="18sp"
+        android:text="@string/securityQuestion"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.374"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_login_enterPassword"
-        app:layout_constraintVertical_bias="0.14" />
-
+        app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_userName"
+        app:layout_constraintVertical_bias="0.219" />
 
 </android.support.constraint.ConstraintLayout>
