--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -38,7 +38,7 @@
         android:backgroundTint="@color/colorPrimaryDark"
         android:cursorVisible="true"
         android:ems="10"
-        android:hint="@string/Useresname"
+        android:hint="@string/username"
         android:inputType="textPersonName"
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
@@ -117,7 +117,7 @@
         android:backgroundTint="@color/colorPrimaryDark"
         android:cursorVisible="true"
         android:ems="10"
-        android:hint="@string/confirmpassword"
+        android:hint="@string/confirmPassword"
         android:inputType="textPassword"
         android:textColor="@android:color/background_light"
         android:textColorHighlight="@color/colorAccent"
@@ -125,27 +125,81 @@
         android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationPass"
-        app:layout_constraintVertical_bias="0.101"
+        app:layout_constraintVertical_bias="0.084"
+        tools:targetApi="o" />
+
+    <EditText
+        android:id="@+id/editText_name_registrationSecurityQuestion"
+        android:layout_width="254dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:autofillHints=""
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:hint="@string/securityQuestion"
+        android:inputType="text"
+        android:textColor="@android:color/background_light"
+        android:textColorHighlight="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
+        android:textCursorDrawable="@drawable/cursor_colour"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationPass"
+        app:layout_constraintVertical_bias="0.333"
+        tools:targetApi="o" />
+
+    <EditText
+        android:id="@+id/editText_name_registrationSecurityAnswer"
+        android:layout_width="254dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:autofillHints=""
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:hint="@string/securityAnswer"
+        android:inputType="text"
+        android:textColor="@android:color/background_light"
+        android:textColorHighlight="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
+        android:textCursorDrawable="@drawable/cursor_colour"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationPass"
+        app:layout_constraintVertical_bias="0.554"
         tools:targetApi="o" />
 
     <Button
         android:id="@+id/button_signUp_registerbutton"
         android:layout_width="254dp"
         android:layout_height="wrap_content"
-        android:onClick="signUpBtnClickRegister"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
+        android:onClick="signUpBtnClickRegister"
         android:text="@string/signupTwo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationConfirmPass"
-        app:layout_constraintVertical_bias="0.125" />
+        app:layout_constraintVertical_bias="0.796" />
 
     <TextView
         android:id="@+id/textView_signUp_backtoLogin"
@@ -155,14 +209,16 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:onClick="backToLoginTextClick"
         android:text="@string/backToLogin"
         android:textColor="@android:color/background_light"
-        android:onClick="backToLoginTextClick"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_signUp_registerbutton"
-        app:layout_constraintVertical_bias="0.267" />
+        app:layout_constraintVertical_bias="0.857" />
+
 </android.support.constraint.ConstraintLayout>
