--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -19,7 +19,7 @@
         android:text="@string/resetMyPassword"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
-        android:textSize="75sp"
+        android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -50,7 +50,7 @@
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_forgetPassword_resetPasswordText"
-        app:layout_constraintVertical_bias="0.482"
+        app:layout_constraintVertical_bias="0.26"
         tools:targetApi="o" />
 
 
@@ -76,7 +76,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_forgetPassword_securityQuestion"
-        app:layout_constraintVertical_bias="0.037"
+        app:layout_constraintVertical_bias="0.092"
         tools:targetApi="o" />
 
     <Button
@@ -95,7 +95,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_userName"
-        app:layout_constraintVertical_bias="0.086" />
+        app:layout_constraintVertical_bias="0.154" />
 
     <Button
         android:id="@+id/button_forgetPassword_resetPasswordBtn"
@@ -113,7 +113,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_securityAnswer"
-        app:layout_constraintVertical_bias="0.157" />
+        app:layout_constraintVertical_bias="0.488" />
 
     <TextView
         android:id="@+id/textView_forgetPassword_securityQuestion"
@@ -124,12 +124,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/securityQuestion"
+        android:textColor="@android:color/background_light"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_userName"
-        app:layout_constraintVertical_bias="0.219" />
+        app:layout_constraintVertical_bias="0.338" />
 
 </android.support.constraint.ConstraintLayout>
