--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -21,10 +21,10 @@
         android:textSize="75sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.168" />
+        app:layout_constraintVertical_bias="0.069" />
 
     <EditText
         android:id="@+id/editText_name_registrationName"
@@ -46,10 +46,12 @@
         android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_signUp_signUpText"
-        app:layout_constraintVertical_bias="0.071"
-        tools:targetApi="o" />
+        app:layout_constraintVertical_bias="0.049"
+        tools:targetApi="o"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/editText_name_user"
@@ -71,12 +73,13 @@
         android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationName"
 
-        app:layout_constraintVertical_bias="0.059"
-        tools:targetApi="o" />
+        app:layout_constraintVertical_bias="0.04"
+        tools:targetApi="o"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/editText_name_registrationPass"
@@ -99,10 +102,10 @@
         android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_name_user"
-        app:layout_constraintVertical_bias="0.064"
+        app:layout_constraintVertical_bias="0.047"
         tools:targetApi="o" />
 
     <EditText
@@ -128,7 +131,7 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationPass"
-        app:layout_constraintVertical_bias="0.084"
+        app:layout_constraintVertical_bias="0.062"
         tools:targetApi="o" />
 
     <EditText
@@ -136,6 +139,7 @@
         android:layout_width="254dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:autofillHints=""
@@ -153,8 +157,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationPass"
-        app:layout_constraintVertical_bias="0.333"
+        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationConfirmPass"
+        app:layout_constraintVertical_bias="0.072"
         tools:targetApi="o" />
 
     <EditText
@@ -162,6 +166,7 @@
         android:layout_width="254dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:autofillHints=""
@@ -177,10 +182,9 @@
         android:textCursorDrawable="@drawable/cursor_colour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationPass"
-        app:layout_constraintVertical_bias="0.554"
+        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationSecurityQuestion"
+        app:layout_constraintVertical_bias="0.11"
         tools:targetApi="o" />
 
     <Button
@@ -188,18 +192,16 @@
         android:layout_width="254dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="204dp"
         android:background="@android:drawable/editbox_background"
         android:onClick="signUpBtnClickRegister"
         android:text="@string/signupTwo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationConfirmPass"
-        app:layout_constraintVertical_bias="0.796" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_name_registrationSecurityAnswer"
+        app:layout_constraintVertical_bias="0.986" />
 
     <TextView
         android:id="@+id/textView_signUp_backtoLogin"
@@ -216,9 +218,9 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_signUp_registerbutton"
-        app:layout_constraintVertical_bias="0.857" />
+        app:layout_constraintVertical_bias="0.251" />
 
 </android.support.constraint.ConstraintLayout>
