fixed some bugs

--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ForgetPassword"
+    tools:context=".presentation.LoginFeature.ForgetPassword"
     android:background="@color/colorPrimary">
 
 
@@ -39,7 +39,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newPassword"
         app:layout_constraintVertical_bias="0.052" />
 
 </android.support.constraint.ConstraintLayout>
