--- a/app/src/main/res/layout/activity_view_ad_current_user.xml
+++ b/app/src/main/res/layout/activity_view_ad_current_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/adPostGreyBackground"
-    tools:context=".presentation.ViewAdOfCurrentUser">
+    tools:context=".presentation.PostingAds.ViewAdOfCurrentUser">
 
     <TextView
         android:id="@+id/textView_viewAdCU_header"
