--- a/app/src/main/res/layout/fragment_tab_fragment_electronics.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment_electronics.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.HomePageTabFragments.TabFragmentElectronics">
+    tools:context=".presentation.HomePageTabs.TabFragmentElectronics">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listView_insideFragmentElectronics"
